# REMS

./: .gitignore  README.md  arduino-data.c  arduino-data.ino  bbp_build.sh  log.py  main.c  main.cpp  main.py  prometheus.yml  rems_2_build.sh  rems_2_transfer.py  rems_2_transfer.sh  rems_4_build.sh  transfer.sh  weather_build.sh
arduino/: arduino-data.cpp  arduino-data.ino  lib.cpp  lib.h  lib.ino  motion.h  temp.h
bbp/: .env  Dockerfile  README.md  bbp_build.sh  custom.ini  grafana.ini
bbp/grafana/: bbp-grafana.service  datasource.yml
bbp/prometheus/: bbp-prometheus.service  prometheus.yml
bbp/server/: .env  Cargo.toml  Dockerfile  bbp-server.service
bbp/server/src/: commands.rs  main.rs
client/: .env  Cargo.toml
client/src/: main.rs
monitor/: service-monitor.service
monitor/monitor/: settings.py  urls.py  views.py
residence/: Dockerfile  README.md  arduino-data.service  residence_build.sh  serial.c
residence/arduino/: Dockerfile  arduino-data.cpp  arduino-upload  arduino.ino  lib.cpp  lib.h  lib.ino  motion.h  temp.h  vib.h
residence/client/: .env  Cargo.toml  Dockerfile  residence-client.service
residence/serial/: Cargo.toml  Dockerfile  arduino-monitor  residence-serial.service  serial.c
server/: Cargo.toml
server/src/: commands.rs  main.rs
tablet-weather_station/: index.html  styles.css
tablet_weather_station/: index.html  scripts.js
tablet_weather_station/tablet_weather_station/: manage.py
weather/: .env  README.md  transfer.sh  weather.py  weather_build.sh
weather/pimoroni/: Dockerfile  weather.py  (+1 more)
webpage/: scripts.js
(+18 files in other folders)
