[package]
name = "rems-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
chrono = "0.4.24"
prometheus = "0.13.3"
prometheus_exporter ="0.8.5"
