[package]
name = "bbp-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
chrono = "0.4.24"
threadpool = "1.8.1"
prometheus = "0.13.3"
prometheus_exporter ="0.8.5"
local-ip-address = "0.5.4"
dotenvy = "0.15.7"
